// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вернёт офферы и параметры, если найдены по фильтру: марка 1`] = `
Object {
  "catalog_filter": Array [
    Object {
      "mark": "BMW",
    },
  ],
}
`;

exports[`вернёт офферы и параметры, если найдены по фильтру: марка, модель 1`] = `
Object {
  "catalog_filter": Array [
    Object {
      "mark": "BMW",
      "model": "5ER",
    },
  ],
}
`;

exports[`вернёт офферы и параметры, если найдены по фильтру: марка, модель, поколение 1`] = `
Object {
  "catalog_filter": Array [
    Object {
      "generation": "22212692",
      "mark": "BMW",
      "model": "5ER",
    },
  ],
}
`;

exports[`правильно строит фильтры накапливает офферы по фильтрам марка + модель + поколение 1`] = `
Object {
  "mark": "BMW",
  "model": "5ER",
}
`;

exports[`правильно строит фильтры накапливает офферы по фильтрам марка + модель 1`] = `
Object {
  "mark": "BMW",
}
`;
